2008-04-06  Johan Dahlin  <johan@gnome.org>

	* gio/goutputstream.override: 
	(_wrap_g_output_stream_write_asyn,_wrap_g_output_stream_close_async): 
	* gio/ginputstream.override (async_result_callback_marshal_read): 
	Add wrappers.

	* gio/gio.override: Ignore vararg functions and remove a couple
	of left overs in the generic marshaller.

	* gio/gio.defs: Remove g_file_output_stream_truncate,
	g_file_output_stream_tell and g_file_input_stream_tell

	* Makefile.am:
	* gio/gfileenumerator.override (_wrap_g_file_enumerator_tp_iter): 
	Implement the python iteration protocol on GFileEnumerator

	* codegen/argtypes.py (arg): Add goffset to the int64 arg type

2008-04-02  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c: bug #428732
	(pyg_enum_new): Fix two wrong assertions about '__enum_values__'
	size and contents.
	(pyg_enum_reduce): New function (based on patch by Phil Dumont).
	(pyg_enum_methods): Hook it up.

2008-03-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c (pyg_enum_richcompare): Don't return NULL
	after warning; more useful warning message (bug #519631).

2008-03-22  Johan Dahlin  <johan@gnome.org>

	* gio/ginputstream.override:
	* gio/gio.override:
	* tests/test_gio.py:

	Make read_finish() return the string, remove the get_buffer method.
	This is more pythonic, as it mimics the normal read() behavior of 
	python.
	Update the tests and use a separate marshaller for read.

2008-03-21  Johan Dahlin  <johan@gnome.org>

	* gobject/__init__.py:
	* tests/test_properties.py:
	Allow gobject.property work with subclasses. Add tests.

	(#523352, Tomeu Vizoso)

2008-03-10  Johan Dahlin  <johan@gnome.org>

	* configure.ac: Require gio and giounix 2.15.7.

2008-03-09  Johan Dahlin  <johan@gnome.org>

	* gio/gio-types.defs:
	* gio/gio.defs:
	* tests/test_gio.py:
	Update to SVN of gio:
	g_file_contains_file -> g_file_has_prefix
	can_seek and can_truncate are now only on the GSeekable interface
	Add tests

	(#521207, Thomas Leonard)
